syntax = "proto3";
package ClanNetwork.clannetwork.claim.v1beta1;

option go_package = "github.com/ClanNetwork/clan-network/x/claim/types";
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto"; 

message ClaimRecord {
  // address of claim user
  string claim_address = 1 [ (gogoproto.moretags) = "yaml:\"claim_address\"" ];

  string clan_address = 2 [ (gogoproto.moretags) = "yaml:\"clan_address\"" ];

  // total initial claimable amount for the user
  repeated cosmos.base.v1beta1.Coin initial_claimable_amount = 3 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"initial_claimable_amount\""
  ];

  // true if action is claimed
  // index of bool in array refers to action enum #
  repeated bool action_claimed = 4 [
    (gogoproto.moretags) = "yaml:\"action_claimed\"",
    (gogoproto.nullable) = false
  ];

}