syntax = "proto3";
package ClanNetwork.clannetwork.claim.v1beta1;

import "gogoproto/gogo.proto";
import "clan/claim/v1beta1/params.proto";
import "clan/claim/v1beta1/claim_record.proto";
import "cosmos/base/v1beta1/coin.proto";
import "clan/claim/v1beta1/claim_eth_record.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/ClanNetwork/clan-network/x/claim/types";

// GenesisState defines the claim module's genesis state.
message GenesisState {
  // balance of the claim module's account
  cosmos.base.v1beta1.Coin module_account_balance = 1 [
    (gogoproto.moretags) = "yaml:\"module_account_balance\"",
    (gogoproto.nullable) = false
  ];

  // params defines all the parameters of the module.
  Params params = 2 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];

  // list of claim records, one for every airdrop recipient
  repeated ClaimRecord claim_records = 3 [
    (gogoproto.moretags) = "yaml:\"claim_records\"",
    (gogoproto.nullable) = false
  ];


  // list of claim records, one for every airdrop recipient
  repeated ClaimEthRecord claim_eth_records = 4 [
    (gogoproto.moretags) = "yaml:\"claim_eth_records\"",
    (gogoproto.nullable) = false
  ];

  // this line is used by starport scaffolding # genesis/proto/state
}
